--- a/docMaker_web/style.css
+++ b/docMaker_web/style.css
@@ -174,6 +174,31 @@ footer{
  }
 /*-- FIM Contatos --*/
 
+/*-- Medias para diferente devices --*/
+@media (max-width: 767px){
+
+    .caption h1{
+        font-size: 2.3rem;
+        letter-spacing: .15rem;
+        padding-bottom: .5rem;
+    }
+    
+    .caption h3{
+        font-size: 1.2rem;
+        padding-bottom: 1.2rem;
+    }
+    
+    .btn-lg{
+        padding: .5rem 1rem;
+        font-size: 1rem;
+    }
+
+    .narrow h1{
+        font-size: 1.6rem;
+    }
+
+}
+
 
 /*======= BOOTSTRAP BREAK POINTS
 Usar apenas devices em resolução média
