--- a/docMaker_web/style_form.css
+++ b/docMaker_web/style_form.css
@@ -6,18 +6,18 @@ body{
     background-size: cover;
 }
 
-.main-section{
+.main{
     margin: 0 auto;
-    margin-top: 130px;
+    margin-top: 100px;
     padding: 0;
 }
 
-.modal-content{
+/*.modal-content{
     background-color: #3b4652;
     opacity: .95;
     padding: 0 18px;
     box-shadow: 0px 0px 3px #848484;
-}
+}*/
 
 .logo-img{
     background-color: #3b4652;
@@ -26,34 +26,29 @@ body{
     margin-bottom: 35px;
     border-radius: 5px;
     box-shadow: 0px 0px 3px #27c2a5;
+    text-align: center;
+    position: relative;
 }
 
-.control-label{
-    color: white;
-}
 
 .logo-img img{
-    height: 80px;
-    width: 240px;
+    height: 70px;
+    width: 230px;
 }
 
+/*
 .form-group{
     margin-bottom: 25px;
-}
+}*/
 
-.form-group input{
-    height: 42px;
-    border-radius: 5px;
-    border: 0;
-    font-size: 18px;
-}
+
 
 button{
     width: 45%;
     margin: 5px 0px 25px;
 }
 
-.btn{
+.acao{
     background-color: #27c2a5;
     font-size: 19px;
     color: #fff;
@@ -62,7 +57,109 @@ button{
     border-bottom: 4px solid #219882;
 }
 
-.btn:hover, .btn:focus{
+.acao:hover, .acao:focus{
     background-color: #25a890!important;
     border-bottom: 4px solid #25a890!important;
 }
+
+/*------ Formulário inicio----*/
+.formulario{
+    width: 500px;
+    margin: 50px auto;
+    text-align: center;
+    position: relative;
+}
+
+.formulario fieldset{
+    background: #fff;
+    border: 0 none;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+
+    box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+    padding: 20px 30px;
+    box-sizing: border-box;
+    width: 80%;
+    margin: 0 10%;
+    position: absolute;
+}
+
+.formulario fieldset:not(:first-of-type){
+    display: none;
+}
+
+.formulario input{
+    padding: 10px;
+    height: 42px;
+    border-radius: 3px;
+    font-size: 18px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    outline: none;
+    box-sizing: border-box;
+    width: 80%;
+    margin-bottom: 10px;
+}
+
+.formulario h3{
+    font: 22px;
+    width: 100%;
+    float: left;
+    text-align: left;
+    margin-bottom: 8%;
+}
+
+.formulario #progress{
+    margin-bottom: 30px;
+    overflow: hidden;
+    counter-reset: step;
+}
+
+.formulario #progress li{
+    list-style: none;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 10px;
+    float: left;
+    width: 33.33%;
+    position: relative;
+}
+/*------ Contador de steps ----------*/
+.formulario #progress li:before{
+    content: counter(step);
+    counter-increment: step;
+    width: 20px;
+    display: block;
+    line-height: 20px;
+    background: white;
+    color: #333;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    margin: 0 auto 10px auto; 
+}
+
+.formulario #progress li:after{
+    content: '';
+    width: 100%;
+    background: white;
+    height: 2px;
+    position: absolute;
+    top: 9px;
+    left: -50%;
+    z-index: -1;
+}
+
+.formulario #progress li:first-child:after{
+    display: none;
+}
+
+.formulario #progress li.ativo:before, .formulario #progress li.ativo:after{
+    background: rgb(18, 233, 237);
+    color: white;
+    text-shadow: 0 1px 0;
+}
+
+/*------ Formulário fim----*/
