--- a/docMaker_web/style_form.css
+++ b/docMaker_web/style_form.css
@@ -6,6 +6,22 @@ body{
     background-size: cover;
 }
 
+.erros, .ok{
+    width: 380px;
+    padding: 5px;
+    background: rgba(238, 249, 113, 0.9);
+    margin: 20px auto 0 auto;
+    text-align: center;
+    border-radius: 4px;
+    box-shadow: 0px 0px 3px #333;
+    border: 1px solid rgba(238, 249, 113, 0.9);
+
+}
+.ok{
+    background: rgba(145, 222, 143, 0.9);
+    border-color: rgba(68, 171, 50, 0.9);
+    color: white; 
+}
 .main{
     margin: 0 auto;
     margin-top: 100px;
@@ -123,7 +139,7 @@ button{
     text-transform: uppercase;
     font-size: 10px;
     float: left;
-    width: 33.33%;
+    width: 22.22%;
     position: relative;
 }
 /*------ Contador de steps ----------*/
